host-client: refactor, comments, fixed unit tests